[gd_scene load_steps=7 format=2]

[ext_resource path="res://Math Mobs/Factorial gang.png" type="Texture" id=1]
[ext_resource path="res://Math Mobs/shoot.anim" type="Animation" id=2]
[ext_resource path="res://Math Mobs/mafia.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("mafia:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CapsuleShape2D" id=2]
height = 18.0

[sub_resource type="CapsuleShape2D" id=3]

[node name="mafia" type="KinematicBody2D"]
position = Vector2( 0, 1 )
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 8
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/shoot = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.66667, -1.66666 )
shape = SubResource( 2 )

[node name="mafia" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="Reload" type="Timer" parent="."]

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( -11, -1 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 8

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 2.66667, -3 )
shape = SubResource( 3 )

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
